# gcp-getting-started-lab-jp

./: .env  .env.example  .gitignore  GEMINI.md  README.md  deploy.py  gemini-extension.json  mcp.json  pyproject.toml  query.py  setup_env.sh  tutorial-cloudshell.md  tutorial.md  weather_agent.ipynb
.claude-plugin/: plugin.json
01-starter/: .env.example  Procfile  create_agent_engine.py  deploy_agent_engine.py  main.py  requirements.txt
01-starter/agent/: __init__.py  agent.py  agents.py  runner.py  tool.py
01-starter/web/: app.py
02-solution/: Procfile  create_custom_topics.py  deploy_agent_engine.py  requirements.txt
02-solution/agent/: __init__.py  agent.py  agents.py  callback.py  runner.py
02-solution/web/: app.py
academic-research/: README.md  pyproject.toml
academic-research/academic_research/: __init__.py  agent.py  prompt.py
academic-research/deployment/: deploy.py  test_deployment.py
academic-research/eval/: test_eval.py
academic-research/tests/: test_agents.py
agent-dev/: Agent開発基礎版(天気Agent).ipynb  DeleteAfterTest
agent-dev/notebooks/: travel_concierge.ipynb  weather_agent.ipynb  weather_agent_agentspace.ipynb
agent-dev/workshop-env/: Dockerfile  setup_workstationscluster.sh
anthos/: README.md  tutorial.md
anthos/assets/: dashboard.json
anthos/k8s-manifest/: backendconfig.yaml  cartservice-fault.yaml  config-management.yaml  frontend-dr.yaml  frontend-v1.yaml  frontend-v2.yaml  istio-manifest.yaml  istio-manifest.yaml.patch  istio-manifests.yaml  istio-manifests.yaml.patch  kubernetes-manifests.yaml  mci.yaml  mcs.yaml  namespace-ob.yaml  zonedeploy.yaml  zonens.yaml
anthos/scripts/: 01_create_clusters.sh  02_get_credentials.sh  05_install_asm.sh  (+5 more)
appdev/: README.md  tutorial.md
appdev_genai_googlecloud/: tutorial_chat.md  tutorial_ja.md  tutorial_serverless_ja.md  tutorial_short_ja.md
appdev_with_generative_ai/: tutorial_ja.md
appmod/: .gitignore  README.md
cad/: README.md
cloudrun/: README.md  tutorial.md
cloudrun2/: .gitignore  README.md  tutorial.md
data_analytics/: README.md  sample.csv  sample.ipynb  sample.sql
deep-search/: Makefile  README.md  pyproject.toml
deep-search/app/: __init__.py  agent.py  config.py
deep-search/frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
deep-search/frontend/src/: App.tsx  global.css  main.tsx
deep-search/frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  InputForm.tsx  WelcomeScreen.tsx
deep-search/frontend/src/components/ui/: button.tsx  scroll-area.tsx  select.tsx  tabs.tsx
devops/: Dockerfile  README.md  cloudbuild.yaml  go.mod  go.sum  main.go  tutorial.md
fundamental/: readme.md
gke-ai/: tutorial.md
gke-basic/: tutorial.md
gke-basics-2025/: tutorial.md  tutorial.test.md
gke-basics-2026/: tutorial.md
gke-next25/: tutorial.md
hpc/: README.md
inference-gw/: .gitignore  tutorial.md
machine_learning/: README.md
microservices/: README.md  tutorial-1.md  tutorial-2.md  tutorial-3.md  tutorial.md
migration-to-gcp/: settings.json
movie-script/: pyproject.toml
movie_search/: .gitignore
notebooks/: weather_agent.ipynb
pfe-4-agents/: README.md  troubleshooting.md  tutorial.md
pfe-adv-sep/: tutorial.md
pfe-basic/: tutorial.md
pfe-basic-sep/: tutorial.md
pfe-cicd/: Dockerfile  app.py  app.txt  cloudbuild-2.yaml  cloudbuild.yaml  clouddeploy.yaml  requirements.txt  skaffold.yaml  test_app.py  tutorial.md
scripts/: add_sumservice_to_backend.sh  create_self-cert.sh  create_self-cert_auto.sh  credentials.sh  firebase_config.sh  nextauth_config.sh  setup_loadbalancer.sh
step00/: __init__.py  agent.py
step01/: agent.py
step02/: agent.py  utils.py
step03/: agent.py  deploy.py  utils.py
step04/: agent.py  deploy.py  utils.py
step05/: app.py
workstations/: tutorial_ws.md
workstations_with_generative_ai/: tutorial_ja.md
(+841 files in other folders)
