[project]
name = "gcp-getting-started-lab-jp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.19.0",
    "google-cloud-aiplatform>=1.126.1",
    "google-genai>=1.51.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
]
